# pagexml

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  poetry_scripts.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: example.xml  example_table.xml
doc/: pagexml-parse_pagexml_file.ipynb
docs/: conf.py  index.rst  modules.rst  pagexml.analysis.rst  pagexml.helper.rst  pagexml.model.rst  pagexml.plotting.rst  pagexml.rst  requirements.txt  usage.rst
docs/source/: api.rst  install.rst  tutorials.rst  usage.rst
docs/source/api/: pagexml.analysis.layout_stats.rst  pagexml.analysis.rst  pagexml.analysis.stats.rst  pagexml.analysis.text_stats.rst  pagexml.column_parser.rst  pagexml.helper.file_helper.rst  pagexml.helper.pagexml_helper.rst  pagexml.helper.rst  pagexml.helper.text_helper.rst  pagexml.model.physical_document_model.rst  pagexml.model.rst  pagexml.pagexml_tools.rst  pagexml.parser.rst  pagexml.plotting.plot_dist.rst  pagexml.plotting.rst  pagexml.rst
notebooks/: Demo-analysing-pagexml-characteristics.ipynb  Demo-analysing-scan-characteristics-book-sections.ipynb  Demo-analysing-scan-characteristics-checking-quality.ipynb  Demo-analysing-scan-characteristics-comparing-subsets.ipynb  Demo-analysing-scan-characteristics.ipynb  Demo-checking-characteristics-of-PagexML-documents.ipynb  Demo-from-lines-to-running-text.ipynb  Demo-reading-pagexml-files-from-archive.ipynb  Demo-restructuring-documents.ipynb  Demo-sorting.ipynb  Demo-table-processing.ipynb  Demo-text-search-in-pagexml-archive.ipynb  Demo-text-search-simple.ipynb  Demo-understanding-the-document-model.ipynb  demo_scripts.py  pagexml-parse_pagexml_file.ipynb
notebooks/.ipynb_checkpoints/: Demo-text-search-checkpoint.ipynb  pagexml-parse_pagexml_file-checkpoint.ipynb
pagexml/: __init__.py  column_parser.py  pagexml_tools.py  parser.py
pagexml/analysis/: inventory_stats.py  layout_stats.py  stats.py  text_stats.py
pagexml/helper/: file_helper.py  pagexml_helper.py  text_helper.py
pagexml/model/: basic_document_model.py  coords.py  inventory.py  logical_document_model.py  pagexml_document_model.py  physical_document_model.py  xml.py
pagexml/parsers/: column_parser.py  scan_parser.py
pagexml/plotting/: plot_dist.py
pagexml/transform/: segmentation.py
tests/: analysis-layout_stats_test.py  analysis-text_stats_test.py  analysis_test.py  helper-pagexml_helper_test.py  helper-text_helper_test.py  helper_test.py  integration_tests.py  issue_10.xml  issue_10_test.py  pagexml_test.py  parser_test.py  parsers-column_parser_test.py  parsers-scan_parser_test.py  pdm_xml_test.py  physical_document_model_test.py  plotting-plot_dist_test.py  xml_test.py
