[tool.poetry]
name = "pagexml-tools"
version = "0.7.0"
description = "Utility functions for reading PageXML files"
authors = ["Marijn Koolen <marijn.koolen@huygens.knaw.nl>", "Bram Buitendijk <bram.buitendijk@di.huc.knaw.nl>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/knaw-huc/pagexml"
repository = "https://github.com/knaw-huc/pagexml"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "pagexml" }]

[tool.poetry.dependencies]
python = ">=3.9 <4.0"
fuzzy-search = "^2.4.5"
numpy = ">=1.26"
py7zr = "^0.20.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0"
scipy = ">=1.7"
tqdm = "^4.64.1"
xmltodict = "^0.13.0"
shapely = "^2.0.3"
lxml = "^5.3.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
icecream = "^2.1.2"
loguru = "^0.6.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/knaw-huc/pagexml/issues"

[tool.poetry.scripts]
version = 'poetry_scripts:version'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
